--- a/db/Beckhoff_5XXX/ecmcEL5101-0010-chX.template
+++ b/db/Beckhoff_5XXX/ecmcEL5101-0010-chX.template
@@ -47,7 +47,7 @@ record(bi,"${ECMC_P}Enc${CH_ID}-SyncErrAlrm"){
 }
 
 # latching
-record(bo,    "${ECMC_P}Enc${CH_ID}-LchAutRstSp"){
+record(bo,    "${ECMC_P}Enc${CH_ID}-LtchAutRstSp"){
   field(DESC, "reset latch automatically")
   field(ZNAM, "off")
   field(ONAM, "on")
@@ -76,8 +76,8 @@ record(seq, "${ECMC_P}Enc${CH_ID}-LtchRst") {
 record(ai,"${ECMC_P}Enc${CH_ID}-PosAct"){
   field(DESC, "$(HWTYPE): Enc Actl Pos (Raw)")
   field(PINI, "$(PINI=1)")
-  field(DTYP, "asynInt32")
-  field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CMD=UINT32TOFLOAT64/T_SMP_MS=$(T_SMP_MS=1000)/TYPE=asynInt32/ec$(MASTER_ID).s$(SLAVE_POS).positionActual${CH_ID}?")
+  field(DTYP, "asynFloat64")
+  field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CMD=UINT32TOFLOAT64/T_SMP_MS=$(T_SMP_MS=1000)/TYPE=asynFloat64/ec$(MASTER_ID).s$(SLAVE_POS).positionActual${CH_ID}?")
   field(SCAN, "I/O Intr")
   field(LINR, "$(LINR=SLOPE)")
   field(ESLO, "$(ESLO=1)")
