--- a/examples/PSI/lab_setup/stepper_bissc/cfg/axis.yaml
+++ b/examples/PSI/lab_setup/stepper_bissc/cfg/axis.yaml
@@ -2,7 +2,8 @@ axis:
   id: ${AXIS_ID=1}                                    # Axis id
   #parameters: 'powerAutoOnOff=2;powerOffDelay=-1;'
   autoEnable:
-    atStartup: True
+    enableTimeout: 2
+    disableTimeout: 2
 
 epics:
   name: ${AX_NAME=M1}                                 # Axis anme
