Backlash: Set default values for BVEL, BACC. Add some tuning docs fro systems that experience backlash

--- a/db/core/ecmcMotorRecord.template
+++ b/db/core/ecmcMotorRecord.template
@@ -11,7 +11,7 @@ record(motor,"$(PREFIX)$(MOTOR_NAME)")
     field(JAR,  "$(JAR=0)")
     field(BDST, "$(BDST=0)")
     field(DLY,  "$(DLY=0)")
-    field(BVEL, "$(BVEL=0)")
+    field(BVEL, "$(BVEL=$(VELO=0))")
     field(BACC, "$(BACC=0)")
     field(OUT,  "@asyn($(MOTOR_PORT),$(AXIS_NO))")
     field(MRES, "$(MRES=1)")
