--- a/examples/PSI/lab_setup/master_slave/slit/slit_matrix/cfg/axis_vax6_YGAP.yaml
+++ b/examples/PSI/lab_setup/master_slave/slit/slit_matrix/cfg/axis_vax6_YGAP.yaml
@@ -2,17 +2,13 @@ axis:
   id: ${AX_ID}
   group: virtualAxes
   type: end effector
-  #parameters: 'powerAutoOnOff=0;powerOnDelay=1.0;powerOffDelay=2.0;'
-  autoEnable:
-    enableTimeout: 5.0
-    disableTimeout: 3.0
 
 epics:
-  name: CENTERY
+  name: GAPY
   precision: 4
   unit: mm
   motorRecord:
-    description: "Center (Virtual)"
+    description: "Gap (Virtual)"
     fieldInit: "SPAM=0,RTRY=1,FOFF=Frozen,TWV=1"
 
 encoder:
@@ -23,28 +19,28 @@ encoder:
 
 trajectory:
   axis:
-    velocity: 1
-    acceleration: 1
-    jerk: 5
+    velocity: 0.5
+    acceleration: 0.25
+    jerk: 0.25
 
 input:
   limit:
     forward: ec${M_ID=0}.s-1.ONE.0              # unused
     backward: ec${M_ID=0}.s-1.ONE.0             # unused
-  home: ec${M_ID=0}.s-1.ONE.0                   # unused  
+  home: ec${M_ID=0}.s-1.ONE.0                   # unused
   interlock: ec${M_ID=0}.s-1.ONE.0              # unused
 
 softlimits:
   enable: false
   forwardEnable: true
   backwardEnable: true
-  forward: 52
-  backward: 8
+  forward: 20
+  backward: -20
 
 monitoring:
   lag:
     enable: yes
-    tolerance: 0.03
+    tolerance: 0.02
     time: 100
   target:
     enable: yes
@@ -52,11 +48,11 @@ monitoring:
     time: 100
   velocity:
     enable: yes
-    max: 2
+    max: 0.6
     time:
       trajectory: 100
       drive: 100
-      
+
 plc:
   enable: true
   externalCommands: true
