--- a/examples/PSI/lab_setup/stepper_bissc_dyn_targ_vel/cfg/axis.yaml
+++ b/examples/PSI/lab_setup/stepper_bissc_dyn_targ_vel/cfg/axis.yaml
@@ -1,5 +1,6 @@
 axis:
   id: ${AXIS_ID=1}                                    # Axis id
+  #parameters: 'powerAutoOnOff=2;powerOffDelay=-1;'
   autoEnable:
     enableTimeout: 2
     disableTimeout: 2
@@ -54,10 +55,10 @@ controller:
   Kd: 0                                               # Kd derivative gain
 
 trajectory:
-  type: 1
+  type: 0
   axis:
     velocity: 2                                       # Default velo for axis
-    acceleration: 5                                   # Default acc for axis
+    acceleration: 2                                   # Default acc for axis
     deceleration: 2                                   # Default dec for axis
     emergencyDeceleration: 5                          # Deceleration when axis in error state
     jerk: 10                                          # Default jerk for axis
