--- a/db/Beckhoff_7XXX/ecmcEL7062_autoTune-chX.template
+++ b/db/Beckhoff_7XXX/ecmcEL7062_autoTune-chX.template
@@ -1,7 +1,7 @@
 record(seq, "${ECMC_P}Drv${CH_ID}-TuneTrg") {
     field(DESC, "Trigg tune seq")    
     field(DO1,  "${MASTER_ID}")
-    field(DO2,  "70621")    # Command Tune drive EL7062 (70621 for execute, 70622 for teset)
+    field(DO2,  "10")    # Command Tune drive EL7062 (70621 for execute, 70622 for teset)
     field(DO3,  "${SLAVE_POS}")
     field(DO4,  "${CH_ID}")
     field(DO5,  "1")
@@ -11,7 +11,7 @@ record(seq, "${ECMC_P}Drv${CH_ID}-TuneTrg") {
     field(DLY4, "0.01")
     field(DLY5, "0.01")
     field(LNK1, "${P}m${MASTER_ID}-EcTool.A")    # Master ID
-    field(LNK2, "${P}m${MASTER_ID}-EcTool.B")    # Command
+    field(LNK2, "${P}m${MASTER_ID}-EcTool-Cmd PP")  # Command
     field(LNK3, "${P}m${MASTER_ID}-EcTool.D")    # Slave ID    
     field(LNK4, "${P}m${MASTER_ID}-EcTool.E")    # CH ID
     field(LNK5, "${P}m${MASTER_ID}-EcTool.U PP") # TRIGG
@@ -20,7 +20,7 @@ record(seq, "${ECMC_P}Drv${CH_ID}-TuneTrg") {
 record(seq, "${ECMC_P}Drv${CH_ID}-TuneTrgRB") {
     field(DESC, "Trigg tune RB")    
     field(DO1,  "${MASTER_ID}")
-    field(DO2,  "70622")    # Command Tune drive EL7062 (70621 for execute, 70622 for teset)
+    field(DO2,  "11")    # Command Tune drive EL7062 (70621 for execute, 70622 for teset)
     field(DO3,  "${SLAVE_POS}")
     field(DO4,  "${CH_ID}")
     field(DO5,  "1")
@@ -30,7 +30,7 @@ record(seq, "${ECMC_P}Drv${CH_ID}-TuneTrgRB") {
     field(DLY4, "0.01")
     field(DLY5, "0.01")
     field(LNK1, "${P}m${MASTER_ID}-EcTool.A")    # Master ID
-    field(LNK2, "${P}m${MASTER_ID}-EcTool.B")    # Command
+    field(LNK2, "${P}m${MASTER_ID}-EcTool-Cmd PP")  # Command
     field(LNK3, "${P}m${MASTER_ID}-EcTool.D")    # Slave ID    
     field(LNK4, "${P}m${MASTER_ID}-EcTool.E")    # CH ID
     field(LNK5, "${P}m${MASTER_ID}-EcTool.U PP") # TRIGG
